--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "next",
-    "build": "next build --output public",
+    "build": "next build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
